--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
                     data-textalign="['left','left','left','left']" data-paddingtop="[0,0,0,0]"
                     data-paddingright="[0,0,0,0]" data-paddingbottom="[0,0,0,0]" data-paddingleft="[20,20,20,20]">
                     Plover App </br>
-                    We believe ic cooperation
+                    We believe in cooperation
                 </h1>
                 <div class="tp-caption tp-resizeme tp-static-layer banner-desc main-lys" data-x="left" data-hoffset="0"
                      data-y="center" data-voffset="85" data-width="['610','410','410','410']" data-height="['auto']"
@@ -222,7 +222,7 @@
                     Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam aliquid animi autem esse eveniet
                     facilis itaque molestiae natus odio
                 </div>
-                <div class="tp-caption tp-resizeme banner-big-text tp-static-layer" data-x="left" data-hoffset="-240"
+                <div class="tp-caption tp-resizeme banner-big-text tp-static-layer" data-x="left" data-hoffset="10"
                      data-y="bottom" data-voffset="80" data-width="none" data-height="none" data-whitespace="nowrap"
                      data-type="text" data-responsive_offset="on" data-startslide="0" data-endslide="2"
                      data-frames='[{"from":"opacity:0;","speed":500,"to":"o:1;","delay":500,"ease":"Power2.easeInOut"},{"delay":"wait","speed":300,"to":"opacity:0;","ease":"nothing"}]'
