--- a/index.html
+++ b/index.html
@@ -624,9 +624,9 @@
 <div class="rs-newsletter relative radius-rt bg6 md-mt-0 md-pt-80 md-pb-80" id="download">
     <div class="container">
         <div class="row y-middle">
-            <div class=" col-md-12 pr-65 mt--7 md-mb-50 sm-mb-26">
+            <div class=" col-md-12 mt--7 md-mb-50 sm-mb-26">
                 <div class="content-part">
-                    <div class="sec-title mb-45 pr-60 sm-mb-36 mt-50 text-center">
+                    <div class="sec-title mb-45 sm-mb-36 mt-50 text-center">
                         <div class="sub-title primary-color">Download</div>
                         <h2 class="title mb-0 white-color">Download Plover Now</h2>
                         <div class="rs-contact bg-trans mt-3">
@@ -651,14 +651,14 @@
 <div class="rs-footer">
     <div class="footer-bottom text-center">
         <div class="container">
-            <div class="row align-items-center justify-content-between">
+            <div class="row align-items-center justify-content-center justify-content-md-between">
                 <div class="col-auto">
                     <div class="rs-contact">
                         <div class="content-part">
                             <ul class="social-links">
                                 <li><a href="#"><i class="fa fa-facebook"></i></a></li>
                                 <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-                                <li><a href="#"><i class="fa fa-pinterest-p"></i></a></li>
+                                <li><a href="#"><i class="fa fa-instagram"></i></a></li>
                             </ul>
                         </div>
                     </div>
