--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- favicon -->
-    <link rel="apple-touch-icon" href="apple-touch-icon.png">
     <link rel="shortcut icon" type="image/x-icon" href="assets/images/fav.png">
     <!-- bootstrap v4 css -->
     <link rel="stylesheet" type="text/css" href="assets/css/bootstrap.min.css">
@@ -72,7 +71,7 @@
                             <a class="logo" href="index.html"><img src="assets/images/logo.png" alt="logo"></a>
                         </div>
                     </div>
-                    <div class="col-lg-10 text-left pl-104">
+                    <div class="col-lg-10 text-left">
                         <div class="main-menu">
                             <div class="mobile-menu">
                                 <a class="rs-menu-toggle">
@@ -96,6 +95,14 @@
 
                                     <!-- Screen Shots Start -->
                                     <li><a class="indicator-item" href="#rs-screenshots">Screens</a></li>
+                                    <!-- Screen Shots End -->
+
+                                    <!-- Screen Shots Start -->
+                                    <li><a class="indicator-item" href="privacy.html">Privacy</a></li>
+                                    <!-- Screen Shots End -->
+
+                                    <!-- Screen Shots Start -->
+                                    <li><a class="indicator-item" href="trems.html">Terms & Conditions</a></li>
                                     <!-- Screen Shots End -->
 
                                     <!-- Download Start -->
@@ -215,12 +222,11 @@
                 <div class="tp-caption tp-resizeme tp-static-layer banner-desc main-lys" data-x="left" data-hoffset="0"
                      data-y="center" data-voffset="85" data-width="['610','410','410','410']" data-height="['auto']"
                      data-type="text" data-whitespace="normal" data-responsive_offset="on" data-startslide="0"
-                     data-endslide="2"
+                     data-endslide="2" data-fontsize="['20','17','16','15']"
                      data-frames='[{"from":"opacity:0;","speed":500,"to":"o:1;","delay":500,"ease":"Power2.easeInOut"},{"delay":"wait","speed":300,"to":"opacity:0;","ease":"nothing"}]'
                      data-textalign="['left','left','left','left']" data-paddingtop="[0,0,0,0]"
                      data-paddingright="[0,0,0,0]" data-paddingbottom="[0,0,0,0]" data-paddingleft="[20,20,20,20]">
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam aliquid animi autem esse eveniet
-                    facilis itaque molestiae natus odio
+                    creatively made electronic platform for products and services barter
                 </div>
                 <div class="tp-caption tp-resizeme banner-big-text tp-static-layer" data-x="left" data-hoffset="10"
                      data-y="bottom" data-voffset="80" data-width="none" data-height="none" data-whitespace="nowrap"
@@ -307,10 +313,10 @@
                         <img class="shape" src="assets/images/features/shape1.svg" alt="">
                     </div>
                     <div class="content-part">
-                        <h3 class="title"><a href="#">Easy to Edit</a></h3>
-                        <div class="desc">Lorem ipsum dolor sit amet consectr adipiscing elitit sed do eiusmod tempor
-                            incididunt ut labore et.
-                        </div>
+                        <h3 class="title"><a href="#">Easy to Use</a></h3>
+                        <!--                        <div class="desc">Lorem ipsum dolor sit amet consectr adipiscing elitit sed do eiusmod tempor-->
+                        <!--                            incididunt ut labore et.-->
+                        <!--                        </div>-->
                     </div>
                 </div>
             </div>
@@ -322,9 +328,9 @@
                     </div>
                     <div class="content-part">
                         <h3 class="title"><a href="#">Creative Design</a></h3>
-                        <div class="desc">Lorem ipsum dolor sit amet consectr adipiscing elitit sed do eiusmod tempor
-                            incididunt ut labore et.
-                        </div>
+                        <!--                        <div class="desc">Lorem ipsum dolor sit amet consectr adipiscing elitit sed do eiusmod tempor-->
+                        <!--                            incididunt ut labore et.-->
+                        <!--                        </div>-->
                     </div>
                 </div>
             </div>
@@ -336,9 +342,9 @@
                     </div>
                     <div class="content-part">
                         <h3 class="title"><a href="#">User Friendly</a></h3>
-                        <div class="desc">Lorem ipsum dolor sit amet consectr adipiscing elitit sed do eiusmod tempor
-                            incididunt ut labore et.
-                        </div>
+                        <!--                        <div class="desc">Lorem ipsum dolor sit amet consectr adipiscing elitit sed do eiusmod tempor-->
+                        <!--                            incididunt ut labore et.-->
+                        <!--                        </div>-->
                     </div>
                 </div>
             </div>
@@ -370,9 +376,14 @@
                         <img class="mt--55" src="assets/images/about/top-shape.png" alt="">
                     </div>
                     <div class="sec-title mb-40">
-                        <h2 class="title mb-24 sm-mb-15">Ensure Protection for Sensitive Data </h2>
-                        <div class="desc">Lorem Ipsum is simply dummy text of the printing and typesetting industry.
-                            Lorem Ipsum has been the industry standard dummy text ever since the.
+                        <h2 class="title mb-20 sm-mb-15">Our Vision</h2>
+                        <div class="desc">
+                            We seek to be a pioneering platform in the world of barter and that's thanks to the merits
+                            we provide to our users. We employ technology to serve the society.
+                        </div>
+                        <h2 class="title mt-30 mb-20 sm-mb-15">Our Mission</h2>
+                        <div class="desc">
+                            Providing all the means that benefit everyone through enabling them to use such high tech.
                         </div>
                     </div>
                 </div>
@@ -396,40 +407,29 @@
                         <img class="mt--46" src="assets/images/solutions/shape.png" alt="">
                     </div>
                     <div class="sec-title mb-45">
-                        <h2 class="title mb-24 sm-mb-15">Easy & Best Solution for Your Business</h2>
-                        <div class="desc mb-22">Lorem Ipsum is simply dummy text of the printing and has typesetting
-                            industry Lorem Ipsum.
-                        </div>
-                        <div class="desc">It is a long established fact that a reader will be distrted by the readable
-                            content of a page when looking at its layout. The point of using Lorem.
+                        <h2 class="title mb-24 sm-mb-15">Our objectives</h2>
+                        <div class="desc">
+                            <ul class="list-unstyled my-list">
+                                <li>
+                                    Spreading the use of our application on a large scale to include the Arab region in
+                                    general.
+                                </li>
+                                <li>
+                                    Continuous development which benefits the users in return.
+                                </li>
+                                <li>
+                                    Taking our users suggestions in consideration to make Plover a perfect spot for
+                                    exchange.
+                                </li>
+                                <li>
+                                    Creating more ideas to leave a positive impression on our users.
+                                </li>
+                                <li>
+                                    Providing supporting means to facilitate the process of exchange
+                                </li>
+                            </ul>
                         </div>
                     </div>
-                    <ul class="counter">
-                        <li>
-                            <div class="counter-content">
-                                <div class="icon-part">
-                                    <div class="icon-here"><i class="flaticon-download"></i></div>
-                                </div>
-                                <div class="content-part">
-                                    <div class="odometer counter-number" data-count="10"></div>
-                                    <span class="value">M+</span>
-                                    <div class="title">Downloads</div>
-                                </div>
-                            </div>
-                        </li>
-                        <li>
-                            <div class="counter-content">
-                                <div class="icon-part">
-                                    <div class="icon-here"><i class="flaticon-user"></i></div>
-                                </div>
-                                <div class="content-part">
-                                    <div class="odometer counter-number" data-count="160"></div>
-                                    <span class="value">K+</span>
-                                    <div class="title">Active Users</div>
-                                </div>
-                            </div>
-                        </li>
-                    </ul>
                 </div>
             </div>
             <div class="col-lg-6 col-md-6 pt-30">
