--- a/trems.html
+++ b/trems.html
@@ -102,7 +102,7 @@
     <div class="container">
         <div class="text-center">
             <h2 class="text-white m-0">
-                Privacy Policy
+                Terms And Conditions
             </h2>
         </div>
     </div>
@@ -111,7 +111,7 @@
     <div class="row">
         <div class="col-12">
             <div class="sup-page-content py-5">
-                <strong>Privacy Policy</strong>
+                <strong>Terms And Conditions</strong>
                 <p>
                     Plover built the [Plover] app as
                     a Free app. This SERVICE is provided by
