--- a/ltr/index.html
+++ b/ltr/index.html
@@ -363,7 +363,7 @@
         <div class="row y-middle">
             <div class="offset-lg-1"></div>
             <div class="col-lg-5 col-md-6">
-                <div class="image-part pl-60 md-pl-0">
+                <div class="image-part md-pl-0">
                     <img src="assets/images/about/device.png" alt="">
                     <div class="shape">
                         <img class="dance" src="assets/images/about/shape.svg" alt="">
@@ -371,19 +371,21 @@
                 </div>
             </div>
             <div class="col-lg-4 col-md-6 mt--20">
-                <div class="content-part pt-144">
+                <div class="content-part pt-100">
                     <div class="top-shape">
                         <img class="mt--55" src="assets/images/about/top-shape.png" alt="">
                     </div>
                     <div class="sec-title mb-40">
-                        <h2 class="title mb-20 sm-mb-15">Our Vision</h2>
-                        <div class="desc">
-                            We seek to be a pioneering platform in the world of barter and that's thanks to the merits
-                            we provide to our users. We employ technology to serve the society.
-                        </div>
-                        <h2 class="title mt-30 mb-20 sm-mb-15">Our Mission</h2>
-                        <div class="desc">
-                            Providing all the means that benefit everyone through enabling them to use such high tech.
+                        <h2 class="title mb-20 sm-mb-15">About us</h2>
+                        <div class="desc text-justify">
+                            Plover application is a creatively made electronic platform for products and services barter
+                            as it is regarded as a social platform through which you can exchange opinions and ideas to
+                            make it easier to reach people with mutual interests. Through signing up, you are asked to
+                            mention your interests such as sports, reading, or taking care of pets, and any other
+                            activities that you like. One of Plover's outstanding merits is the ability to create an
+                            event in which people with similar interests can gather. It allows you to upload posts to
+                            people who are near you as well. Through Plover, we make sure that get what you need through
+                            exchange; you just need to sign up and enter Plover's world. It's all for free!
                         </div>
                     </div>
                 </div>
@@ -402,12 +404,21 @@
         <div class="row y-middle">
             <div class="offset-lg-1"></div>
             <div class="col-lg-4 col-md-6 pr-0 md-pr-15 sm-order-last">
-                <div class="content-part pt-156 md-pt-130">
+                <div class="content-part pt-100 md-pt-80">
                     <div class="top-shape">
                         <img class="mt--46" src="assets/images/solutions/shape.png" alt="">
                     </div>
                     <div class="sec-title mb-45">
-                        <h2 class="title mb-24 sm-mb-15">Our objectives</h2>
+                        <h2 class="title mb-10 sm-mb-5">Our Vision</h2>
+                        <div class="desc">
+                            We seek to be a pioneering platform in the world of barter and that's thanks to the merits
+                            we provide to our users. We employ technology to serve the society.
+                        </div>
+                        <h2 class="title mt-30 mb-10 sm-mb-5">Our Mission</h2>
+                        <div class="desc">
+                            Providing all the means that benefit everyone through enabling them to use such high tech.
+                        </div>
+                        <h2 class="title mt-30 mb-10 sm-mb-5">Our objectives</h2>
                         <div class="desc">
                             <ul class="list-unstyled my-list">
                                 <li>
@@ -502,10 +513,10 @@
                         <i class="flaticon-straight-quotes"></i>
                         <img class="move-y" src="assets/images/testimonial/shape.svg" alt="">
                     </div>
-                    <div class="desc">There are many variations of passages of Lorem Ipsum available, but the majority
-                        have suffered alteration in some form, by injected humour, or randomised words which don't look
-                        even slightly believable. If you are going to use a passage of Lorem Ipsum, you need to be sure
-                        there isn't anything embarrassing hidden in the middle of text. Internet.
+                    <div class="desc">
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad animi autem consectetur dignissimos
+                        ea error, esse et exercitationem explicabo ipsum iste magnam maiores minus non optio, quibusdam
+                        recusandae reiciendis veritatis
                     </div>
                     <ul class="stars">
                         <li><i class="fa fa-star"></i></li>
@@ -520,10 +531,10 @@
                         <i class="flaticon-straight-quotes"></i>
                         <img class="move-y" src="assets/images/testimonial/shape.svg" alt="">
                     </div>
-                    <div class="desc">There are many variations of passages of Lorem Ipsum available, but the majority
-                        have suffered alteration in some form, by injected humour, or randomised words which don't look
-                        even slightly believable. If you are going to use a passage of Lorem Ipsum, you need to be sure
-                        there isn't anything embarrassing hidden in the middle of text. Internet.
+                    <div class="desc">
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad animi autem consectetur dignissimos
+                        ea error, esse et exercitationem explicabo ipsum iste magnam maiores minus non optio, quibusdam
+                        recusandae reiciendis veritatis
                     </div>
                     <ul class="stars">
                         <li><i class="fa fa-star"></i></li>
@@ -538,10 +549,10 @@
                         <i class="flaticon-straight-quotes"></i>
                         <img class="move-y" src="assets/images/testimonial/shape.svg" alt="">
                     </div>
-                    <div class="desc">There are many variations of passages of Lorem Ipsum available, but the majority
-                        have suffered alteration in some form, by injected humour, or randomised words which don't look
-                        even slightly believable. If you are going to use a passage of Lorem Ipsum, you need to be sure
-                        there isn't anything embarrassing hidden in the middle of text. Internet.
+                    <div class="desc">
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad animi autem consectetur dignissimos
+                        ea error, esse et exercitationem explicabo ipsum iste magnam maiores minus non optio, quibusdam
+                        recusandae reiciendis veritatis
                     </div>
                     <ul class="stars">
                         <li><i class="fa fa-star"></i></li>
@@ -556,10 +567,10 @@
                         <i class="flaticon-straight-quotes"></i>
                         <img class="move-y" src="assets/images/testimonial/shape.svg" alt="">
                     </div>
-                    <div class="desc">There are many variations of passages of Lorem Ipsum available, but the majority
-                        have suffered alteration in some form, by injected humour, or randomised words which don't look
-                        even slightly believable. If you are going to use a passage of Lorem Ipsum, you need to be sure
-                        there isn't anything embarrassing hidden in the middle of text. Internet.
+                    <div class="desc">
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad animi autem consectetur dignissimos
+                        ea error, esse et exercitationem explicabo ipsum iste magnam maiores minus non optio, quibusdam
+                        recusandae reiciendis veritatis
                     </div>
                     <ul class="stars">
                         <li><i class="fa fa-star"></i></li>
