--- a/rtl/privacy.html
+++ b/rtl/privacy.html
@@ -47,6 +47,8 @@
     <link rel="stylesheet" type="text/css" href="assets/css/rs-spacing.css">
     <!-- responsive css -->
     <link rel="stylesheet" type="text/css" href="assets/css/responsive.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/rtl.css">
+
 </head>
 <body>
 
@@ -81,7 +83,7 @@
                             <nav class="rs-menu menu-indicator">
                                 <ul id="onepage-menu" class="nav-menu onepage-menu">
                                     <!-- Home -->
-                                    <li class=""><a class="indicator-item indicator" href="index.html">Home</a>
+                                    <li class=""><a class="indicator-item indicator" href="index.html">الرئيسية</a>
                                     </li>
                                     <!-- End Home -->
 
@@ -102,7 +104,7 @@
     <div class="container">
         <div class="text-center">
             <h2 class="text-white m-0">
-                Privacy Policy
+                سياسة الخصوصية
             </h2>
         </div>
     </div>
