--- a/en/index.html
+++ b/en/index.html
@@ -264,7 +264,7 @@
                          data-frames='[{"from":"y:[100%];z:0;rX:0deg;rY:0;rZ:0;sX:1;sY:1;skX:0;skY:0;","mask":"x:0px;y:0px;s:inherit;e:inherit;","speed":2000,"to":"o:1;","delay":700,"ease":"Power3.easeInOut"},{"delay":"wait","speed":1500,"to":"y:[-100%];","mask":"x:0;y:0;s:inherit;e:inherit;","ease":"Power3.easeInOut"}]'
                          data-textalign="['left','left','left','left']" data-paddingtop="[0,0,0,0]"
                          data-paddingright="[0,0,0,0]" data-paddingbottom="[0,0,0,0]" data-paddingleft="[0,0,0,0]">
-                        <img src="assets/images/banner/screen.png" alt="Device Screen">
+                        <img class="slider-img" src="assets/images/banner/screen.png" alt="Device Screen">
                     </div>
                 </li>
                 <li data-transition="fade">
@@ -279,7 +279,7 @@
                          data-frames='[{"from":"y:[100%];z:0;rX:0deg;rY:0;rZ:0;sX:1;sY:1;skX:0;skY:0;","mask":"x:0px;y:0px;s:inherit;e:inherit;","speed":2000,"to":"o:1;","delay":700,"ease":"Power3.easeInOut"},{"delay":"wait","speed":1500,"to":"y:[-100%];","mask":"x:0;y:0;s:inherit;e:inherit;","ease":"Power3.easeInOut"}]'
                          data-textalign="['left','left','left','left']" data-paddingtop="[0,0,0,0]"
                          data-paddingright="[0,0,0,0]" data-paddingbottom="[0,0,0,0]" data-paddingleft="[0,0,0,0]">
-                        <img src="assets/images/banner/screen2.png" alt="Device Screen">
+                        <img class="slider-img" src="assets/images/banner/screen2.png" alt="Device Screen">
                     </div>
                 </li>
                 <li data-transition="fade">
@@ -294,7 +294,7 @@
                          data-frames='[{"from":"y:[100%];z:0;rX:0deg;rY:0;rZ:0;sX:1;sY:1;skX:0;skY:0;","mask":"x:0px;y:0px;s:inherit;e:inherit;","speed":2000,"to":"o:1;","delay":700,"ease":"Power3.easeInOut"},{"delay":"wait","speed":1500,"to":"y:[-100%];","mask":"x:0;y:0;s:inherit;e:inherit;","ease":"Power3.easeInOut"}]'
                          data-textalign="['left','left','left','left']" data-paddingtop="[0,0,0,0]"
                          data-paddingright="[0,0,0,0]" data-paddingbottom="[0,0,0,0]" data-paddingleft="[0,0,0,0]">
-                        <img src="assets/images/banner/screen3.png" alt="Device Screen">
+                        <img class="slider-img" src="assets/images/banner/screen3.png" alt="Device Screen">
                     </div>
                 </li>
             </ul>
